# librush

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
Rush/: .clang-format  GfxBitmapFont.cpp  GfxBitmapFont.h  GfxCommon.cpp  GfxCommon.h  GfxDevice.h  GfxDeviceMtl.h  GfxDeviceMtl.mm  GfxDeviceVK.cpp  GfxDeviceVK.h  GfxEmbeddedShaders.cpp  GfxEmbeddedShaders.h  GfxEmbeddedShadersMSL.cpp  GfxPrimitiveBatch.cpp  GfxPrimitiveBatch.h  GfxRef.h  MathCommon.h  MathTypes.cpp  MathTypes.h  Platform.cpp  Platform.h  PlatformLinux.cpp  PlatformMac.mm  PlatformWin32.cpp  Rush.h  Rush.natvis  RushC.cpp  RushC.h  UtilArray.h  UtilBuffer.h  UtilCamera.cpp  UtilCamera.h  UtilCameraManipulator.cpp  UtilCameraManipulator.h  UtilColor.h  UtilDataStream.h  UtilFile.cpp  UtilFile.h  UtilHash.h  UtilImage.cpp  (+20 more)
Scripts/: cmake-vs2017-vk.cmd  cmake-vs2019-vk.cmd  embed_shaders.py
Shaders/: Primitive.hlsl
